# lib_gdal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gdal.cmake
apps/: CMakeLists.txt  commonutils.cpp  commonutils.h  dumpoverviews.cpp  gdal2ogr.c  gdal_contour.cpp  gdal_grid.cpp  gdal_grid_bin.cpp  gdal_grid_lib.cpp  gdal_rasterize_bin.cpp  gdal_rasterize_lib.cpp  gdal_translate_bin.cpp  gdal_translate_lib.cpp  gdal_utils.h  gdal_utils_priv.h  gdaladdo.cpp  gdalasyncread.cpp  gdalbuildvrt_bin.cpp  gdalbuildvrt_lib.cpp  gdaldem_bin.cpp  gdaldem_lib.cpp  gdalenhance.cpp  gdalflattenmask.c  gdalinfo_bin.cpp  gdalinfo_lib.cpp  gdallocationinfo.cpp  gdalmanage.cpp  gdalserver.c  gdalsrsinfo.cpp  gdaltindex.c  gdaltindex.cpp  gdaltorture.cpp  gdaltransform.cpp  gdalwarp_bin.cpp  gdalwarp_lib.cpp  gdalwarpsimple.c  gnmanalyse.cpp  gnmmanage.cpp  multireadtest.cpp  nearblack_bin.cpp  (+10 more)
autotest/: CMakeLists.txt
autotest/cpp/: testcopywords.cpp  testperfcopywords.cpp
bindings/: CMakeLists.txt
bindings/include/: Band.i  ColorTable.i  Dataset.i  Driver.i  MajorObject.i  Operations.i  RasterAttributeTable.i  Transform.i  XMLNode.i  cpl.i  cpl_exceptions.i  cplvirtualmem.i  gdal.i  gdal_array.i  gdal_typemaps.i  gdalconst.i  gnm.i  ogr.i  ogr_error_map.i  osr.i
bindings/java/: javadoc.java
bindings/python/: CMakeLists.txt  gnm.py  setup.cfg
core/: CMakeLists.txt
core/alg/: CMakeLists.txt  contour.cpp  delaunay.c  gdal_alg.h  gdal_alg_priv.h  gdal_crs.c  gdal_nrgcrs.c  gdal_octave.cpp  gdal_rpc.cpp  gdal_simplesurf.cpp  gdal_simplesurf.h  gdal_tps.cpp  gdalapplyverticalshiftgrid.cpp  gdalchecksum.cpp  gdalcutline.cpp  gdaldither.cpp  gdalgeoloc.cpp  gdalgrid.cpp  gdalgrid.h  gdalgrid_priv.h  gdalgridavx.cpp  gdalgridsse.cpp  gdalmatching.cpp  gdalmediancut.cpp  gdalpansharpen.cpp  gdalpansharpen.h  gdalproximity.cpp  gdalrasterize.cpp  gdalrasterpolygonenumerator.cpp  gdalsievefilter.cpp  gdalsimplewarp.cpp  gdaltransformer.cpp  gdaltransformgeolocs.cpp  gdalwarper.cpp  gdalwarper.h  gdalwarpkernel.cpp  gdalwarpkernel_opencl.c  gdalwarpkernel_opencl.cpp  gdalwarpkernel_opencl.h  gdalwarpoperation.cpp  (+7 more)
core/gcore/: CMakeLists.txt  gdal.h  gdal_mdreader.cpp  gdal_mdreader.h  gdal_misc.cpp  gdal_pam.h  gdal_priv.h  gdal_proxy.h  gdal_rat.cpp  gdal_rat.h  gdal_version.h  gdal_version.h.in  gdalabstractbandblockcache.cpp  gdalallvalidmaskband.cpp  gdalarraybandblockcache.cpp  gdalclientserver.cpp  gdalcolortable.cpp  gdaldataset.cpp  gdaldefaultasync.cpp  gdaldefaultoverviews.cpp  gdaldriver.cpp  gdaldrivermanager.cpp  gdalexif.cpp  gdalgeorefpamdataset.h  gdalgmlcoverage.cpp  gdalhashsetbandblockcache.cpp  gdaljp2abstractdataset.cpp  gdaljp2abstractdataset.h  gdaljp2box.cpp  gdaljp2metadata.cpp  gdaljp2metadata.h  gdaljp2metadatagenerator.cpp  gdalmajorobject.cpp  gdalmultidomainmetadata.cpp  gdalnodatamaskband.cpp  gdalnodatavaluesmaskband.cpp  gdalopeninfo.cpp  gdaloverviewdataset.cpp  gdalpamdataset.cpp  gdalpamproxydb.cpp  (+10 more)
core/gnm/: CMakeLists.txt  gnm.h  gnm_api.h  gnm_priv.h  gnmgenericnetwork.cpp  gnmgraph.cpp  gnmgraph.h  gnmlayer.cpp  gnmnetwork.cpp  gnmresultlayer.cpp  gnmrule.cpp
core/lib/: CMakeLists.txt
core/ogr/: CMakeLists.txt  generate_encoding_table.c  gml2ogrgeometry.cpp  ogr2gmlgeometry.cpp  ogr_api.cpp  ogr_api.h  ogr_capi_test.c  ogr_core.h  ogr_expat.cpp  ogr_feature.h  ogr_fromepsg.cpp  ogr_geocoding.cpp  ogr_geometry.h  ogr_opt.cpp  ogr_p.h  ogr_spatialref.h  ogr_srs_dict.cpp  ogr_srs_erm.cpp  ogr_srs_esri.cpp  ogr_srs_ozi.cpp  ogr_srs_panorama.cpp  ogr_srs_pci.cpp  ogr_srs_proj4.cpp  ogr_srs_usgs.cpp  ogr_srs_validate.cpp  ogr_srs_xml.cpp  ogr_srsnode.cpp  ogr_xerces.cpp  ograpispy.cpp  ograssemblepolygon.cpp  ogrcircularstring.cpp  ogrcompoundcurve.cpp  ogrct.cpp  ogrcurve.cpp  ogrcurvecollection.cpp  ogrcurvepolygon.cpp  ogrfeature.cpp  ogrfeaturedefn.cpp  ogrfeaturequery.cpp  ogrfeaturestyle.cpp  (+31 more)
core/port/: CMakeLists.txt  cpl_atomic_ops.cpp  cpl_atomic_ops.h  cpl_aws.cpp  cpl_aws.h  cpl_base64.cpp  cpl_config_extras.h  cpl_conv.cpp  cpl_conv.h  cpl_cpu_features.cpp  cpl_csv.cpp  cpl_csv.h  cpl_error.cpp  cpl_error.h  cpl_findfile.cpp  cpl_getexecpath.cpp  cpl_google_cloud.cpp  cpl_google_oauth2.cpp  cpl_hash_set.cpp  cpl_hash_set.h  cpl_http.cpp  cpl_http.h  cpl_json.cpp  cpl_json.h  cpl_list.cpp  cpl_list.h  cpl_minixml.cpp  cpl_minixml.h  cpl_minizip_ioapi.cpp  cpl_minizip_unzip.cpp  cpl_minizip_zip.cpp  cpl_multiproc.cpp  cpl_multiproc.h  cpl_odbc.cpp  cpl_odbc.h  cpl_path.cpp  cpl_port.h  cpl_progress.cpp  cpl_quad_tree.cpp  cpl_quad_tree.h  (+43 more)
docs/: CMakeLists.txt  README  install.txt
docs/apps/: gdal_utilities.dox
docs/doc/: credits.dox  download.dox  examples.dox  gdal_building.dox  gdal_datamodel.dox  gdal_drivertut.dox  gdal_tutorial.dox  grid_tutorial.dox  index.dox  sponsorship.dox  warptut.dox
docs/ogr/: ogr_drivertut.dox  ogrsf_frmts.dox
drivers/: CMakeLists.txt  gdalallregister.cpp  gnm_frmts.h  gnmregisterall.cpp  ogr_attrind.cpp  ogr_attrind.h  ogr_gensql.cpp  ogr_gensql.h  ogr_miattrind.cpp  ogrdatasource.cpp  ogreditablelayer.cpp  ogreditablelayer.h  ogremulatedtransaction.cpp  ogremulatedtransaction.h  ogrlayer.cpp  ogrlayerdecorator.cpp  ogrlayerdecorator.h  ogrlayerpool.cpp  ogrmutexeddatasource.cpp  ogrmutexeddatasource.h  ogrmutexedlayer.cpp  ogrmutexedlayer.h  ogrregisterall.cpp  ogrsf_frmts.h  ogrsfdriver.cpp  ogrsfdriverregistrar.cpp  ogrunionlayer.cpp  ogrwarpedlayer.cpp
drivers/common/: CMakeLists.txt
drivers/network/: CMakeLists.txt
drivers/raster/: CMakeLists.txt
drivers/vector/: CMakeLists.txt
frmts/miramon_common/: CMakeLists.txt
fuzzers/tests/: CMakeLists.txt
tests/: CMakeLists.txt
tests/alg/: fillnodata.py
tests/cpp/: CMakeLists.txt  test_cpl.cpp  test_gdal.cpp  test_gdal_aaigrid.cpp  test_gdal_dted.cpp  test_ogr.cpp  test_osr.cpp
tests/gdrivers/: blx.py  grib.py  isis2.py  mrf.py  pds.py  rmf.py  vicar.py  wcs.py
tests/ogr/: index_p.mid  index_p.mif  ogr_gpkg.py  ogr_kml.py  ogr_mitab.py  ogr_mvt.py  ogr_ngw.py  ogr_pds4.py  ogr_sxf.py
tests/osr/: osr_basic.py  osr_url.py
(+1618 files in other folders)
